Bug 85657 - systemd-217 Failed to start udev Kernel Device Manager
Summary: systemd-217 Failed to start udev Kernel Device Manager
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Zbigniew Jedrzejewski-Szmek
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-30 17:12 UTC by Ralph_Ulrich
Modified: 2014-11-01 22:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Ralph_Ulrich 2014-10-30 17:12:00 UTC
-- Reboot --
Okt 30 17:52:36 maci systemd-journal[84]: Runtime journ.....
....
Okt 30 17:52:37 maci kernel: random: systemd urandom read with 84 bits of entropy available
Okt 30 17:52:37 maci kernel: random: nonblocking pool is initialized
Okt 30 17:52:37 maci systemd-journal[84]: Journal started
Okt 30 17:52:37 maci systemd-fsck[77]: gentoo: clean, 229481/786432 files, 1788481/3145728 blocks
Okt 30 17:52:37 maci kernel: EXT4-fs (sda4): re-mounted. Opts: (null)
Okt 30 17:52:37 maci systemd-udevd[114]: Assertion '(level & 0x07) == level' failed at /tmp/portage/sys-apps/systemd-217/work/systemd-217/src/shared/log.c:294, function log_set_max_level(). A
Okt 30 17:52:37 maci systemd[1]: Failed to start udev Kernel Device Manager.
Okt 30 17:52:37 maci systemd[1]: systemd-udevd.service failed.
Okt 30 17:52:37 maci systemd-udevd[118]: Assertion '(level & 0x07) == level' failed at /tmp/portage/sys-apps/systemd-217/work/systemd-217/src/shared/log.c:294, function log_set_max_level(). A
Okt 30 17:52:38 maci systemd[1]: Failed to start udev Kernel Device Manager.
Okt 30 17:52:38 maci systemd[1]: systemd-udevd.service failed.
Okt 30 17:52:38 maci systemd-udevd[120]: Assertion '(level & 0x07) == level' failed at /tmp/portage/sys-apps/systemd-217/work/systemd-217/src/shared/log.c:294, function log_set_max_level(). A
Okt 30 17:52:38 maci systemd[1]: Failed to start udev Kernel Device Manager.
Okt 30 17:52:38 maci systemd[1]: systemd-udevd.service failed.
Okt 30 17:52:38 maci systemd-udevd[122]: Assertion '(level & 0x07) == level' failed at /tmp/portage/sys-apps/systemd-217/work/systemd-217/src/shared/log.c:294, function log_set_max_level(). A
Okt 30 17:52:38 maci systemd[1]: Failed to start udev Kernel Device Manager.
Okt 30 17:52:38 maci systemd[1]: systemd-udevd.service failed.
Okt 30 17:52:38 maci systemd-udevd[124]: Assertion '(level & 0x07) == level' failed at /tmp/portage/sys-apps/systemd-217/work/systemd-217/src/shared/log.c:294, function log_set_max_level(). A
Okt 30 17:52:38 maci systemd[1]: Failed to start udev Kernel Device Manager.
Okt 30 17:52:38 maci systemd[1]: systemd-udevd.service failed.
Okt 30 17:52:38 maci systemd[1]: start request repeated too quickly for systemd-udevd.service
Okt 30 17:52:38 maci systemd[1]: Failed to start udev Kernel Device Manager.
Okt 30 17:52:38 maci systemd[1]: systemd-udevd.service failed.
Okt 30 17:52:38 maci systemd[1]: start request repeated too quickly for systemd-udevd.service
Okt 30 17:52:38 maci systemd[1]: Failed to start udev Kernel Device Manager.
Okt 30 17:52:38 maci systemd[1]: systemd-udevd.service failed.
Okt 30 17:54:05 maci systemd[1]: Job dev-disk-by\x2dlabel-common.device/start timed out.
Okt 30 17:54:05 maci systemd[1]: Timed out waiting for device dev-disk-by\x2dlabel-common.device.
Okt 30 17:54:05 maci systemd[1]: Dependency failed for /common.
Okt 30 17:54:05 maci systemd[1]: Dependency failed for Local File Systems.
Okt 30 17:54:05 maci systemd[1]: Dependency failed for File System Check on /dev/disk/by-label/common.
Okt 30 17:54:05 maci systemd[1]: Job dev-sda5.device/start timed out.
Okt 30 17:54:05 maci systemd[1]: Timed out waiting for device dev-sda5.device.
Okt 30 17:54:05 maci systemd[1]: Dependency failed for Swap Partition.
Okt 30 17:54:05 maci systemd[1]: Dependency failed for Swap.
Okt 30 17:54:06 maci systemd-journal[84]: Permanent journal is using 24.0M (max allowed 1.1G, trying to leave 1.7G free of 4.5G available → current limit 1.1G).
Okt 30 17:54:06 maci systemd-journal[84]: Time spent on flushing to /var is 20.277ms for 840 entries.
Comment 1 Ralph_Ulrich 2014-10-30 17:36:04 UTC
This little check config script:
#!/bin/bash
cd /usr/share/doc
c=/usr/src/linux/.config
bzcat systemd*/README.bz2 \
 |grep ' CONFIG_' \
 |sed -e's/^[[:blank:]]*//' -e's/ .*$//' -e's/\=.*$//' \
 |while read l ; do
    grep -v '#' $c | grep "${l}=" \ 
    || echo "  ${l}  is not activated"
done
--- outputs me:
CONFIG_DEVTMPFS=y
CONFIG_CGROUPS=y
CONFIG_INOTIFY_USER=y
CONFIG_SIGNALFD=y
CONFIG_TIMERFD=y
CONFIG_EPOLL=y
CONFIG_NET=y
CONFIG_SYSFS=y
CONFIG_PROC_FS=y
CONFIG_FHANDLE=y
  CONFIG_SYSFS_DEPRECATED  is not activated
  CONFIG_UEVENT_HELPER_PATH  is not activated
  CONFIG_FW_LOADER_USER_HELPER  is not activated
CONFIG_DMIID=y
CONFIG_BLK_DEV_BSG=y
CONFIG_NET_NS=y
CONFIG_IPV6=y
CONFIG_AUTOFS4_FS=m
CONFIG_TMPFS_POSIX_ACL=y
CONFIG_TMPFS_XATTR=y
CONFIG_SECCOMP=y
  CONFIG_CGROUP_SCHED  is not activated
  CONFIG_FAIR_GROUP_SCHED  is not activated
  CONFIG_SCHEDSTATS  is not activated
  CONFIG_SCHED_DEBUG  is not activated
CONFIG_EFIVAR_FS=y
CONFIG_EFI_PARTITION=y
  CONFIG_AUDIT  is not activated
Comment 2 Ralph_Ulrich 2014-11-01 15:08:02 UTC
This solved my issue:
Adding a single comment sign to
/etc/udev/udev.conf
#udev_log="warn"

I am pretty sure "warn" once was a valid loglevel.
Reconfirmed by uncommenting - again the same failure.
Comment 3 Zbigniew Jedrzejewski-Szmek 2014-11-01 18:46:11 UTC
Docs fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=e03234a160, and behaviour in http://cgit.freedesktop.org/systemd/systemd/commit/?id=ee7122c0ec. Please check that current git works for you.
Comment 4 Ralph_Ulrich 2014-11-01 22:27:16 UTC
# cat /etc/udev/udev.conf |grep log
udev_log="somthin"
---
# journalctl -b
...
Nov 01 23:15:02 maci kernel: random: nonblocking pool is initialized
Nov 01 23:15:02 maci systemd-journal[84]: Journal started
Nov 01 23:15:02 maci systemd-fsck[77]: libudev: udev_new: /etc/udev/udev.conf:4: invalid logging level 'somthin', ignoring.
Nov 01 23:15:02 maci udevadm[80]: libudev: udev_new: /etc/udev/udev.conf:4: invalid logging level 'somthin', ignoring.
Nov 01 23:15:02 maci udevadm[90]: libudev: udev_new: /etc/udev/udev.conf:4: invalid logging level 'somthin', ignoring.
Nov 01 23:15:03 maci systemd-fsck[77]: gentoo: clean, 220201/786432 files, 1707596/3145728 blocks
Nov 01 23:15:03 maci kernel: EXT4-fs (sda4): re-mounted. Opts: (null)
Nov 01 23:15:04 maci systemd-udevd[113]: libudev: udev_new: /etc/udev/udev.conf:4: invalid logging level 'somthin', ignoring.
Nov 01 23:15:04 maci systemd-udevd[113]: starting version 217
Nov 01 23:15:04 maci systemd-udevd[113]: Network interface NamePolicy= disabled on kernel commandline, ignoring.
Nov 01 23:15:04 maci kernel: Monitor-Mwait will be used to enter C-1 state
....
---
Wonderful !
Comment 5 Ralph_Ulrich 2014-11-01 22:36:34 UTC
> check that current git works for you.
Though I only patched systemd-217 using your two commits shown here.
I didnt test your current devel branch!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.