libudev: do not accept invalid log levels

Invalid log levels lead to a assert failure later on.

https://bugs.freedesktop.org/show_bug.cgi?id=85657

(cherry picked from commit ee7122c0ec6aa11f02e9e8d94254b353f12d2c14)

[patch was slightly modified for context adjustment]